--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   
       <!-- Favicon -->
-      <link rel="shortcut icon" type="image/png" href="favicon.png">
+      <link rel="shortcut icon" type="" href="favicon.png">
   
       <!-- CSS Files -->
       <!--==== Google Fonts ====-->
@@ -53,7 +53,7 @@
         <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
             <div class="container">
               
-              <a class="navbar-brand" href="#"><img src="images/logo.png" alt="Bootstrap" ></a>
+              <a class="navbar-brand" href="#"><img src="/images/logo.jpg" alt="Bootstrap" ></a>
               
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
